--- a/css/style.css
+++ b/css/style.css
@@ -37,12 +37,17 @@ body {
 }
 
 .card {
+    
     background-color: white;
     border-radius: 20px;
     padding: 5px;
     filter: drop-shadow(0px 3px 15px rgba(0, 0, 0, 0.1));
 }
 
+.card a {
+    text-decoration : none;
+    color: black;
+}
 .card img {
     object-fit: cover;
 }
